[tool.poetry]
name = "virustotal_stix_generator"
version = "0.1.0"
description = "Rafer's Virustotal to STIX effort"
authors = ["Michael Cutshaw <michael.cutshaw@inl.gov>"]
license = "Rafer Cooley, Taylor McCampbell"

[tool.poetry.dependencies]
python = "~3.7"
docopt = "^0.6.2"
stix2 = {extras = ["taxii"], version = "^3.0.0"}
networkx = "^2.6.2"
numpy = "^1.21.2"
scipy = "^1.7.1"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
